[package]
name = "terrain"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "A lightweight, configurable, local-first full-text search engine for Markdown knowledge bases with Japanese text support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyow/terrain"
readme = "README.md"
keywords = ["search", "markdown", "mcp", "ai", "full-text-search"]
categories = ["artificial-intelligence", "text-processing"]

[[bin]]
name = "terrain"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["bundled-provider", "streamable-http", "dep:clap", "dep:notify", "dep:axum"]
# Bundled reference provider backed by the traverze search engine.
bundled-provider = ["dep:traverze"]
# Streamable HTTP transport support (exposes `streamable_http_service`).
# Only enables the rmcp server-side HTTP transport; bringing your own HTTP
# runtime (axum/hyper) is left to the caller, so this stays axum-free.
streamable-http = ["rmcp/transport-streamable-http-server"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"], optional = true }
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "net"] }
toml = "1"
notify = { version = "8", optional = true }
axum = { version = "0.8", optional = true }
traverze = { version = "0.2.0", features = ["tokenizer-lindera-ipadic"], optional = true }
